# confl-cli

./: CHANGELOG.md  README.ja.md  README.md  pyproject.toml
docs/: plan.md
src/ccli/: config.py  downloader.py  main.py
src/ccli/client/: attachments.py  base.py  pages.py  spaces.py
src/ccli/commands/: config.py  pages.py  spaces.py
tests/: test_downloader.py
tests/test_client/: test_attachments.py  test_base.py  test_pages.py  test_pages_tree.py  test_spaces.py
tests/test_commands/: test_pages.py  test_spaces.py
