[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccli"
version = "0.1.0"
description = "Atlassian Confluence CLI tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "magifd2" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "markdownify>=0.12",
]

[project.scripts]
ccli = "ccli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ccli"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101", "B008"]  # S101: assert in pytest; B008: typer.Option in defaults is intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]  # テストコードのハードコード認証情報は偽陽性

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
