[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confl-cli"
version = "0.1.8"
description = "Atlassian Confluence CLI tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "magifd2" }]
requires-python = ">=3.11"
keywords = ["confluence", "atlassian", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "markdownify>=0.12",
]

[project.urls]
Homepage = "https://github.com/nlink-jp/confl-cli"
Repository = "https://github.com/nlink-jp/confl-cli.git"
"Bug Tracker" = "https://github.com/nlink-jp/confl-cli/issues"

[project.scripts]
confl-cli = "ccli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ccli"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101", "B008"]  # S101: assert in pytest; B008: typer.Option in defaults is intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]  # テストコードのハードコード認証情報は偽陽性

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
